objects/Boarding_Pass__c.object
<CustomObject>
    <fields>
        <fullName>Baggage__c</fullName>
        <label>Baggage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boarding_Pass_Id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Boarding Pass Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Flight_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight id</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Boarding Passes</relationshipLabel>
        <relationshipName>Boarding_passes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <label>Gate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Boarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Boarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>Meal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veg</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passenger_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passenger id</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Boarding Passes</relationshipLabel>
        <relationshipName>Boarding_passes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket id</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Boarding Passes</relationshipLabel>
        <relationshipName>Boarding_passes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Boarding Pass</label>
    <nameField>
        <label>Boarding pass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boarding Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>